# SafeLocked

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
src/: agent.rs  crypto.rs  main.rs  storage.rs  totp.rs
