[package]
name = "lockbox"
version = "2.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
totp-rs = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dirs = "5.0"
rpassword = "7.3"
hex = "0.4"
libc = "0.2"
colored = "2.0"
arboard = "3"
